--- a/styles/global.scss
+++ b/styles/global.scss
@@ -283,6 +283,7 @@ p.section-subtitle {
 .main-services img {
     width: 80px;
     margin-bottom: 25px;
+    margin: auto;
 }
 
 .main-services h3 {
