--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2436,13 +2436,13 @@ p {
     z-index: 1212211;
     opacity: 0;
     transition: .4s ease-out;
-    background-color: #20131a;
+    background-color: white;
 }
 #contactForm > span{
     position: absolute;
     top: .5rem;
     right: .5rem;
-    color: white;
+    color: black;
     font-size: 3rem;
     cursor: pointer;
 }
