--- a/styles/post.scss
+++ b/styles/post.scss
@@ -1,6 +1,6 @@
 /*! CSS Used from: http://99webpage.com/theme-review/landingpage/smooth/assets/css/style.min.css */
 p,ul{margin-top:0;}
-ul{margin-bottom:1rem;}
+// ul{margin-bottom:1rem;}
 img{vertical-align:middle;}
 label{margin-bottom:.5rem;}
 label{display:inline-block;}
