--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 html,
 body {
   padding: 0;
@@ -2363,7 +2368,7 @@ a:hover {
 div,span,p,a,ul,li {
     margin: 0;
     padding: 0;
-    border: 0;
+    // border: 0;
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
